fix: Low contrast on submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,7 +391,7 @@ h1, h2, h3 {
     padding: 15px 32px 15px 32px;
     font-size: 100%;
     background-color: #32CD32;
-    color: #006400;
+    color: #000000;
     float: right;
 }
 
